--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nodemon": "^3.1.11",
+    "primeicons": "^7.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
